--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Parthu</h1>
-    <h2>Parthu</h2>
-    <h3>Parthu</h3>
-    <h4>Parthu</h4>
-    <h5>Parthu</h5>
-    <h6>Parthu</h6>
-        <p>I'm B.<b>Parthu</b>, I'm studying <i>8th</i> <mark>grade</mark></p>
-        <q>Practice makes a man perfect</q><br>
-        H<sub>2</sub>O
-        2<sup>2</sup>=4
+    <h1>A.P.Model School & junior college</h1>
+    <p><b>This School is located in <mark>Banaganapalle, Nanyal Dist, Andhra Pradesh. </mark>This school has <q>skilled teachers </q>We can study upto <strong>Inter 2<sup>nd </sup>year. </strong>We have to write an <em>entrance exam </em>for admission. The fee for the exam is from <mark>₹100-300. </mark>It starts from <strong>6<sup>th </sup>class(or)grade...</strong></b></p>
 </body>
 </html>
