--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>A.P.Model School & junior college</h1>
-    <p><b>This School is located in <mark>Banaganapalle, Nanyal Dist, Andhra Pradesh. </mark>This school has <q>skilled teachers </q>We can study upto <strong>Inter 2<sup>nd </sup>year. </strong>We have to write an <em>entrance exam </em>for admission. The fee for the exam is from <mark>₹100-300. </mark>It starts from <strong>6<sup>th </sup>class(or)grade.</strong></b></p>
+    <p><b>This School is located in <mark>Banaganapalle, Nanyal Dist, Andhra Pradesh. </mark>This school has <q>skilled teachers </q>We can study upto <strong>Inter 2<sup>nd </sup>year. </strong>We have to write an <em>entrance exam </em>for admission. The fee for the exam is from <mark>₹100-300. </mark>It starts from <strong>6<sup>th </sup>class(or)grade...</strong></b></p>
 </body>
 </html>
