--- a/School.html
+++ b/School.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>A.P.Model School & Junior college</h1>
-    <p><b>This school is located in <mark>Banaganapalle, nandyal Dist, Andhra Pradesh. </mark>This school has <q>skilled teachers</q> We have to write an <em>entrance exam </em>for admission. The fee is from <mark>₹100-300.</mark> We can study from 6<sup>th </sup>class(or)grade and upto <strong>Inter 2<sup>nd </sup>year...</strong></b></p>
+    <p><b>This school is located in <mark>Banaganapalle, nandyal Dist, Andhra Pradesh. </mark>This school has <q>skilled teachers</q> We have to write an <em>entrance exam </em>for admission. The fee is from <mark>₹100-300.</mark> We can study from 6<sup>th </sup>class(or)grade and upto <strong>Inter 2<sup>nd </sup>year..</strong></b></p>
 </body>
 </html>
